remove gateway test